2003-11-01  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* autogen.sh: Make version checking work, as pointed out by
	Michael H Schimek in bug #125818.

2003-10-31    <clahey@ximian.com>

	* gnome-common.m4: Changed name of new macro to
	AM_MAINTAINER_MODE_DEFINES and added definition for ENABLE_WERROR.

2003-10-31    <clahey@ximian.com>

	* gnome-common.m4: New macro to disable deprecated functions and
	widgets when maintainer mode is on.

2003-08-10  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* autogen.sh: Show the version found for the various build tools
	like automake, autoconf, libtool, etc. Patch from Steve Chaplin
	(bug #119533).

2003-08-05  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* compile-flags.m4: Continuing to try and get the flags passed
	to g++ in GNOME_CXX_WARNINGS correct. Based on our best
	attempts, the current set should work for the widest range of
	g++ versions (see bug #118987 for the discussion).

2003-08-03  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* compile-flags.m4: Simplify GNOME_CXX_WARNINGS. Fixes bug
	#118987.

2003-07-28  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* compiler-flags.m4: Default setting in the
	GNOME_COMPILE_WARNINGS macro is now "yes". This fixes bug
	#118479 (another good bit of debugging from Steve Chaplin).

2003-07-20  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* compiler-flags.m4: Remove some redundant options as suggested
	by Steve Chaplin in bug #115475. The warnings list looks simpler
	now, but is no less functional.

2003-07-15  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* autogen.sh: Fix a typo when reporting "forbidden" m4 macros.

2003-06-20  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* autogen.sh: Fix some strangeness in the gnome-doc-common test.

2003-06-19  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* autogen.sh: Inserted missing "cd $dirname" to effectively
	process subdirectories, since all it was doing was to process the